--- a/scripts/Jenkinsfile
+++ b/scripts/Jenkinsfile
@@ -1,6 +1,6 @@
 //==================================================================================================
-// This is the Jenkins pipeline script for building the OMAR UI application (formerly omar-app).
-// Environment variables that MUST be passed in by Jenkins:
+// This is the Jenkins pipeline script for building the OMAR WMS application.
+// Environment varialbes that MUST be passed in by Jenkins:
 //    OSSIM_GIT_BRANCH: The tag of the branch to be built. Typically dev or master.
 //
 // Environment varaibles that MUST be set in the Jenkins global environment (manage jenkins -> configure system -> environment varaibles)
@@ -13,7 +13,7 @@
 // TODO: get to run on any node
 node(""){
     def workspaceDir = pwd()
-    def appName = "omar-config-server"
+    def appName = "omar-basemap"
     def omarCommonProjName = "omar-common"
     env.OMAR_COMMON_PROPERTIES="${workspaceDir}/${omarCommonProjName}/omar-common-properties.gradle"
 
@@ -29,34 +29,23 @@ node(""){
             git branch: "${OSSIM_GIT_BRANCH}", url: "https://github.com/ossimlabs/${omarCommonProjName}.git"
         }
 
+        // Set the environment variable for the gradle build
+        // env.OMAR_COMMON_PROPERTIES="${workspaceDir}/${omarCommonProjName}/omar-common-properties.gradle"
+
         notifyObj = load "${workspaceDir}/ossim-ci/jenkins/pipeline/notify.groovy"
     }
 
     try {
-      stage ("Publish App Artifactory")
-      {
-          withCredentials([[$class: 'UsernamePasswordMultiBinding',
-                            credentialsId: 'artifactoryCredentials',
-                            usernameVariable: 'ARTIFACTORY_USER',
-                            passwordVariable: 'ARTIFACTORY_PASSWORD']])
-            {
-              sh """
-              pushd ${workspaceDir}/${appName}/apps/${appName}
-              ./gradlew artifactoryPublish
-              popd
-              """
-            }
-      }
-      stage ("Publish Docker App")
-      {
-        withCredentials([[$class: 'UsernamePasswordMultiBinding',
+      stage ("Publish Docker App") 
+      {      
+        withCredentials([[$class: 'UsernamePasswordMultiBinding', 
                         credentialsId: 'dockerCredentials',
-                        usernameVariable: 'OPENSHIFT_USERNAME',
+                        usernameVariable: 'OPENSHIFT_USERNAME', 
                         passwordVariable: 'OPENSHIFT_PASSWORD']])
         {
             // Run all tasks on the app. This includes pushing to OpenShift and S3.
             sh """
-            pushd ${workspaceDir}/${appName}/apps/${appName}
+            pushd ${workspaceDir}/${appName}/
             ./gradlew ${GRADLE_TASK}
             popd
             """
