--- a/build.gradle
+++ b/build.gradle
@@ -37,7 +37,7 @@ buildscript {
         "RUN cd /usr/src/app && npm install --production",
         "VOLUME /data",
         "WORKDIR /data",
-        """ "ENV NODE_ENV="production" """,
+        """ENV NODE_ENV="production" """,
 
         "EXPOSE 80",
         """ENTRYPOINT ["/usr/src/app/run.sh"] """
