added chown for /usr/src/app directory

--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,8 @@ buildscript {
         "VOLUME /data",
         "WORKDIR /data",
         """ENV NODE_ENV="production" """,
-        """RUN useradd -u 1001 -r -g 0 -s /sbin/nologin -c 'Default Application User' omar && mkdir /usr/share/omar""",
+        """RUN useradd -u 1001 -r -g 0 -s /sbin/nologin -c 'Default Application User' omar""",
+        """RUN chown -R 1001:0 /usr/src/app""",
         """USER 1001""",
         "EXPOSE 80",
         """ENTRYPOINT ["/usr/src/app/run.sh"] """
