--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,7 @@ buildscript {
         "VOLUME /data",
         "WORKDIR /data",
         """ENV NODE_ENV="production" """,
-        """RUN useradd -u 1001 -r -g 0 -s /sbin/nologin -c 'Default Application User' omar""",
+        """RUN useradd --create-home -u 1001 -r -g 0 -s /sbin/nologin -c 'Default Application User' -d /home/omar omar""",
         """RUN chown -R 1001:0 /usr/src/app""",
         """USER 1001""",
         "EXPOSE 80",
