--- a/build.gradle
+++ b/build.gradle
@@ -34,12 +34,11 @@ buildscript {
             && apt-get clean \
             && mkdir -p /usr/src/app """,
         "COPY / /usr/src/app",
-        "RUN cd /usr/src/app && npm install --production && npm install -g tileserver-gl",
-        "VOLUME /data",
+        "RUN rm -rf /data && cd /usr/src/app && npm install --production && npm install -g tileserver-gl",
         "WORKDIR /data",
         """ENV NODE_ENV="production" """,
         """RUN useradd --create-home -u 1001 -r -g 0 -s /sbin/nologin -c 'Default Application User' -d /home/omar omar""",
-        """RUN chown -R 1001:0 /usr/src/app""",
+        """RUN chown -R 1001:0 /usr/src/app && chmod -R g+w /usr/src/app""",
         """USER 1001""",
         "EXPOSE 8080",
         """ENTRYPOINT ["/usr/src/app/run.sh"] """
