--- a/build.gradle
+++ b/build.gradle
@@ -11,7 +11,8 @@ buildscript {
         "FROM debian:stretch",
         "MAINTAINER Petr Sloup <petr.sloup@klokantech.com>",
 
-        """RUN apt-get -qq update \
+        """RUN useradd --create-home -u 1001 -r -g 0 -s /sbin/nologin -c 'Default Application User' -d /home/omar omar \
+            && apt-get -qq update \
             && DEBIAN_FRONTEND=noninteractive apt-get -y install \
                 apt-transport-https \
                 curl \
@@ -31,17 +32,15 @@ buildscript {
             && DEBIAN_FRONTEND=noninteractive apt-get -y --allow-unauthenticated install \
                 nodejs \
             && rm /etc/apt/sources.list.d/nodejs.list \
-            && apt-get clean \
-            && mkdir -p /usr/src/app """,
-        "COPY / /usr/src/app",
-        "RUN rm -rf /data && cd /usr/src/app && npm install --production && npm install -g tileserver-gl",
+            && apt-get clean """,
+        "COPY / /home/omar",
+        """RUN chown -R 1001:0 /home/omar && chmod -R g+w /home/omar \
+             && rm -rf /data && cd /usr/src/app && npm install --production && npm install -g tileserver-gl""",
         "WORKDIR /data",
         """ENV NODE_ENV="production" """,
-        """RUN useradd --create-home -u 1001 -r -g 0 -s /sbin/nologin -c 'Default Application User' -d /home/omar omar""",
-        """RUN chown -R 1001:0 /usr/src/app && chmod -R g+w /usr/src/app""",
-        """USER 1001""",
+        "USER 1001",
         "EXPOSE 8080",
-        """ENTRYPOINT ["/usr/src/app/run.sh"] """
+        """ENTRYPOINT ["/home/omar/run.sh"] """
        ]
      }
     if(System.env.OMAR_COMMON_PROPERTIES)
