--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,7 @@ buildscript {
             && apt-get clean """,
         "COPY / /home/omar",
         """RUN chown -R 1001:0 /home/omar && chmod -R g+w /home/omar \
-             && rm -rf /data && cd /usr/src/app && npm install --production && npm install -g tileserver-gl""",
+             && rm -rf /data && cd /home/omar && npm install --production && npm install -g tileserver-gl""",
         "WORKDIR /data",
         """ENV NODE_ENV="production" """,
         "USER 1001",
