--- a/build.gradle
+++ b/build.gradle
@@ -9,11 +9,9 @@ buildscript {
     dockerStatementsOverride = {
        [
         "FROM debian:stretch",
-        "MAINTAINER Petr Sloup <petr.sloup@klokantech.com>",
-
-        """RUN useradd --create-home -u 1001 -r -g 0 -s /sbin/nologin -c 'Default Application User' -d /home/omar omar \
-            && apt-get -qq update \
-            && DEBIAN_FRONTEND=noninteractive apt-get -y install \
+        """RUN useradd --create-home -u 1001 -r -g 0 -s /sbin/nologin -c 'Default Application User' -d /home/omar omar && \\
+    apt-get -qq update && \\
+    DEBIAN_FRONTEND=noninteractive apt-get -y install \
                 apt-transport-https \
                 curl \
                 unzip \
@@ -25,17 +23,20 @@ buildscript {
                 libllvm3.9 \
                 libprotobuf-dev \
                 libxxf86vm-dev \
-                xvfb \
-            && echo "deb https://deb.nodesource.com/node_6.x stretch main" >> /etc/apt/sources.list.d/nodejs.list \
-            && echo "deb-src https://deb.nodesource.com/node_6.x stretch main" >> /etc/apt/sources.list.d/nodejs.list \
-            && apt-get -qq update \
-            && DEBIAN_FRONTEND=noninteractive apt-get -y --allow-unauthenticated install \
-                nodejs \
-            && rm /etc/apt/sources.list.d/nodejs.list \
-            && apt-get clean """,
+                xvfb && \\
+    echo "deb https://deb.nodesource.com/node_6.x stretch main" >> /etc/apt/sources.list.d/nodejs.list && \\
+    echo "deb-src https://deb.nodesource.com/node_6.x stretch main" >> /etc/apt/sources.list.d/nodejs.list && \\
+    apt-get -qq update && \\
+    DEBIAN_FRONTEND=noninteractive apt-get -y --allow-unauthenticated install \
+                nodejs && \\
+    rm /etc/apt/sources.list.d/nodejs.list && \\
+    apt-get clean """,
         "COPY / /home/omar",
-        """RUN chown -R 1001:0 /home/omar && chmod -R g+w /home/omar \
-             && rm -rf /data && cd /home/omar && npm install --production && npm install -g tileserver-gl""",
+        """RUN chown -R 1001:0 /home/omar && chmod -R g+w /home/omar && \\
+    rm -rf /data && \\
+    cd /home/omar && \\
+    npm install --production && \\
+    npm install -g tileserver-gl""",
         "WORKDIR /data",
         """ENV NODE_ENV="production" """,
         "USER 1001",
@@ -63,4 +64,3 @@ apply plugin: "eclipse"
 apply plugin: "idea"
 apply plugin: "maven-publish"
 apply plugin: "maven"
-
