Cleaning up Dockerfile.

--- a/build.gradle
+++ b/build.gradle
@@ -11,26 +11,24 @@ buildscript {
         "FROM debian:stretch",
         """RUN useradd --create-home -u 1001 -r -g 0 -s /sbin/nologin -c 'Default Application User' -d /home/omar omar && \\
     apt-get -qq update && \\
-    DEBIAN_FRONTEND=noninteractive apt-get -y install \
-                apt-transport-https \
-                curl \
-                unzip \
-                build-essential \
-                python \
-                libcairo2-dev \
-                libgles2-mesa-dev \
-                libgbm-dev \
-                libllvm3.9 \
-                libprotobuf-dev \
-                libxxf86vm-dev \
-                xvfb && \\
+    DEBIAN_FRONTEND=noninteractive apt-get -y install apt-transport-https && \\
+    apt-get -y install curl && \\
+    apt-get -y install unzip && \\
+    apt-get -y install build-essential && \\
+    apt-get -y install python && \\
+    apt-get -y install libcairo2-dev && \\
+    apt-get -y install libgles2-mesa-dev && \\
+    apt-get -y install libgbm-dev && \\
+    apt-get -y install libllvm3.9 && \\
+    apt-get -y install libprotobuf-dev && \\
+    apt-get -y install libxxf86vm-dev && \\
+    apt-get -y install xvfb && \\
     echo "deb https://deb.nodesource.com/node_6.x stretch main" >> /etc/apt/sources.list.d/nodejs.list && \\
     echo "deb-src https://deb.nodesource.com/node_6.x stretch main" >> /etc/apt/sources.list.d/nodejs.list && \\
     apt-get -qq update && \\
-    DEBIAN_FRONTEND=noninteractive apt-get -y --allow-unauthenticated install \
-                nodejs && \\
+    DEBIAN_FRONTEND=noninteractive apt-get -y --allow-unauthenticated install nodejs && \\
     rm /etc/apt/sources.list.d/nodejs.list && \\
-    apt-get clean """,
+    apt-get clean""",
         "COPY / /home/omar",
         """RUN chown -R 1001:0 /home/omar && chmod -R g+w /home/omar && \\
     rm -rf /data && \\
