--- a/scripts/Jenkinsfile
+++ b/scripts/Jenkinsfile
@@ -39,19 +39,19 @@ node(""){
        sh "tar xvfz ossim-ci-${OSSIM_GIT_BRANCH}.tgz"
        notifyObj = load "${env.WORKSPACE}/ossim-ci/jenkins/pipeline/notify.groovy"
     }
-    
+
     try {
-      stage ("Publish Docker App") 
-      {      
-        withCredentials([[$class: 'UsernamePasswordMultiBinding', 
+      stage ("Publish Docker App")
+      {
+        withCredentials([[$class: 'UsernamePasswordMultiBinding',
                         credentialsId: 'dockerCredentials',
-                        usernameVariable: 'OPENSHIFT_USERNAME', 
+                        usernameVariable: 'OPENSHIFT_USERNAME',
                         passwordVariable: 'OPENSHIFT_PASSWORD']])
         {
             // Run all tasks on the app. This includes pushing to OpenShift and S3.
             sh """
             pushd ${workspaceDir}/${appName}/
-            ./gradlew ${GRADLE_TASK}
+            gradle ${GRADLE_TASK}
             popd
             """
         }
