--- a/build.gradle
+++ b/build.gradle
@@ -49,7 +49,7 @@ buildscript {
   }
   repositories {
     maven { url "${ossimMavenProxy}" }
-    if( Boolean.parseBoolean( System.env.WWW_CONNECTED ) ) {
+    if( !System.env.WWW_CONNECTED || Boolean.parseBoolean( System.env.WWW_CONNECTED ) ) {
         mavenLocal()
     }
   }
