added settings version number instead of latest

--- a/build.gradle
+++ b/build.gradle
@@ -56,7 +56,7 @@ buildscript {
   dependencies {
         classpath 'com.bmuschko:gradle-docker-plugin:3.0.6'
         classpath 'com.github.skhatri:gradle-s3-plugin:1.0.4'
-        classpath "org.jfrog.buildinfo:build-info-extractor-gradle:latest.release"
+        classpath "org.jfrog.buildinfo:build-info-extractor-gradle:4.7.5"
   }
 }
 
