--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ buildscript {
     dockerStatementsOverride = {
        [
         "FROM debian:stretch",
-        "USER ROOT",
+        "USER root",
         """RUN useradd --create-home -u 1001 -r -g 0 -s /sbin/nologin -c 'Default Application User' -d /home/omar omar && \\
     apt-get -qq update && \\
     DEBIAN_FRONTEND=noninteractive apt-get -y install apt-transport-https && \\
