--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -20,7 +20,7 @@ global:
 
   volumes:
     basemap-data:
-      type: null
+      type: ""
       nfsServer: null
       nfsMountPoint: null
       accessModes:
@@ -77,3 +77,13 @@ envVars:
   JAVA_OPTS: "-server -Xms256m -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -XX:MaxRAMFraction=1 -XX:+CMSClassUnloadingEnabled -XX:+UseGCOverheadLimit -Djava.awt.headless=true -XshowSettings:vm -Djava.security.egd=file:/dev/./urandom"
 
 ossimDataLocalMountPath: /data
+
+configmaps: {}
+
+extraVolumes: []
+
+extraVolumeMounts: []
+
+extraInitContainers: []
+
+sideCars: []
