Add sonarqube scans

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,5 @@
 buildVersion=1.0.1
 gradleWrapperVersion=2.13
 lastCommit=2fc012f
+systemProp.sonar.host.url=https://sonarqube.ossim.io/
+systemProp.sonar.login=40bccb2aa9c0c677595ebd91fcff6299fbafa22d
