--- a/chart/templates/hpa.yml
+++ b/chart/templates/hpa.yml
@@ -1,6 +1,8 @@
 apiVersion: autoscaling/v1
 kind: HorizontalPodAutoscaler
 metadata:
+  annotations: 
+    field.cattle.io/displayName: {{ .Values.appName }}
   name: {{ .Values.appName }}
 spec:
   maxReplicas: {{ .Values.maxReplicas }}
