--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -4,7 +4,9 @@ metadata:
   labels: {}
   name: {{ .Values.appName }}
 spec:
+  {{- if eq (include "omar-basemap.autoscaling.enabled" $) "false" }}
   replicas: {{ .Values.replicas }}
+  {{- end }}
   selector:
     matchLabels:
       app: {{ .Values.appName }}
