--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -31,7 +31,7 @@ spec:
       - name:  {{ .Values.appName }}
         env:
         {{- include "omar-basemap.envVars" . | indent 8 }}
-        image: "{{ .Values.global.dockerRepository }}/{{ .Values.image.name }}:{{ .Values.image.tag }}"
+        image: {{ include "helm-base.image" . | quote }}
         imagePullPolicy: {{ .Values.image.pullPolicy }}
         livenessProbe:
           failureThreshold: {{ .Values.livenessProbe.failureThreshold }}
