--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -36,7 +36,7 @@ spec:
       - name:  {{ .Values.appName }}
         env:
         {{- include "omar-basemap.envVars" . | indent 8 }}
-        image: {{ include "helm-base.image" . | quote }}
+        image: {{ include "omar-basemap.image" . | quote }}
         imagePullPolicy: {{ .Values.image.pullPolicy }}
         livenessProbe:
           failureThreshold: {{ .Values.livenessProbe.failureThreshold }}
@@ -76,6 +76,7 @@ spec:
       {{- end }}
       restartPolicy: Always
       securityContext: {}
+      serviceAccountName: {{ include "omar-basemap.serviceAccount.name" . }}
       terminationGracePeriodSeconds: {{ .Values.terminationGracePeriodSeconds }}
       volumes:
       {{- include "omar-basemap.volumes" . | indent 6 }}
