--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -27,6 +27,11 @@ global:
   deployment:
     annotations: {}
 
+  serviceAccount:
+    enabled: null
+    annotations: {}
+    # name:
+
 volumeNames:
   - basemap-data
 
@@ -82,3 +87,12 @@ sideCars: []
 
 deployment:
   annotations: {}
+
+serviceAccount:
+  # Specifies whether a service account should be created
+  enabled: null
+  # Annotations to add to the service account
+  annotations: {}
+  # The name of the service account to use.
+  # If not set and enabled is true, a name is generated using the fullname template
+  # name:
