--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -2,7 +2,7 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-appName: omar-basemap
+fullnameOverride: omar-basemap
 
 global:
   dockerRepository: nexus-docker-private-group.ossim.io
