--- a/chart/templates/imagePullSecret.yaml
+++ b/chart/templates/imagePullSecret.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ .Values.fullnameOverride }}-pull-secret
+  name: {{ include "omar-basemap.fullname" . }}-pull-secret
 type: kubernetes.io/dockerconfigjson
 data:
   .dockerconfigjson: {{ include "omar-basemap.imagePullSecret" . }}
