--- a/chart/templates/service.yaml
+++ b/chart/templates/service.yaml
@@ -1,11 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  labels: {}
-  name: {{ .Values.fullnameOverride }}-app
+  labels:
+    {{- include "omar-basemap.labels" . | nindent 4 }}
+  name: {{ include "omar-basemap.fullname" . }}
 spec:
   selector:
-    app: {{ .Values.fullnameOverride }}
+    {{- include "omar-basemap.selectorLabels" . | nindent 4 }}
   ports:
   - name: {{ .Values.internalPort }}-tcp
     port: {{ .Values.externalPort }}
