--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -35,6 +35,10 @@ spec:
       - name: {{ .Chart.Name }}
         env:
         {{- include "omar-basemap.envVars" . | indent 8 }}
+        envFrom:
+          {{- with (concat .Values.envFrom .Values.global.envFrom) }}
+          {{- tpl (toYaml .) $ | nindent 10 }}
+          {{- end }}
         image: {{ include "omar-basemap.image" . | quote }}
         imagePullPolicy: {{ .Values.image.pullPolicy }}
         livenessProbe:
