--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -31,6 +31,7 @@ global:
     # name:
 
   envVars: {}
+  envFrom: []
   nodeSelector: {}
   affinity: {}
   tolerations: []
@@ -93,6 +94,7 @@ sideCars: []
 deployment:
   annotations: {}
 
+envFrom: []
 nodeSelector: {}
 affinity: {}
 tolerations: []
