--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -22,7 +22,7 @@ spec:
       initContainers:
       {{- if (pluck "useSpringConfigServer" .Values .Values.global | first) }}
       - name: wait-for-config-server
-        image: "{{ .Values.global.image.registry }}/busybox:1.28"
+        image: "{{ include "omar-basemap.busybox.image" . }}"
         command: ['sh', '-c', "until wget omar-config-server:8888/omar-config-server/omar-basemap.yml; do echo waiting for config server; sleep 2; done"]
       {{- end }}
       {{- if .Values.extraInitContainers }}
